--- a/App/Client.xcodeproj/xcshareddata/xcschemes/BraveWidgetsExtension.xcscheme
+++ b/App/Client.xcodeproj/xcshareddata/xcschemes/BraveWidgetsExtension.xcscheme
@@ -80,7 +80,7 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "_XCWidgetKind"
-            value = "ShortcutsWidget"
+            value = "TopNewsListWidget"
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
@@ -101,6 +101,7 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
+      askForAppToLaunch = "Yes"
       launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
